[package]
name = "startprox"
version = "0.1.0"
edition = "2024"
authors = ["NeoScript"]

[dependencies]
cliclack = { version = "0.3.6", default-features = false }
config = { version = "0.15.11", features = ["yaml"], default-features = false }
owo-colors = { version = "4.2.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"
strip = "symbols"
